--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -224,7 +224,7 @@ pre {
 
               <h2>Deploying code changes</h2>
                 <p>
-                  The source code for this application is available to be forked from the <a href="https://www.github.com/openshift/django-ex">OpenShift GitHub repository</a>.
+                  The source code for this application is available to be forked from the <a href="https://www.github.com/Diavolo/django-openshift">OpenShift GitHub repository</a>.
                   You can configure a webhook in your repository to make OpenShift automatically start a build whenever you push your code:
                 </p>
 
@@ -263,14 +263,14 @@ $ git push</pre>
                   </ol>
                   <p>
                     Now it is time to add your own code.
-                    Follow along the <a href="https://docs.djangoproject.com/en/1.8/intro/tutorial01/">Django tutorial</a> to learn more about Django.
+                    Follow along the <a href="https://docs.djangoproject.com/en/1.11/intro/tutorial01/">Django tutorial</a> to learn more about Django.
                   </p>
                   <p>
                     If you are running Django's development server in your local host, you can see more information
                     about this request using the toolbar on the right.<br>
                     Please note that by default your Django settings have <code>DEBUG = True</code> and that is not appropriate for production use,
                     but very handy during development.<br>
-                    Refer to the <a href="https://docs.djangoproject.com/en/1.8/howto/deployment/checklist/">Deployment Checklist</a>
+                    Refer to the <a href="https://docs.djangoproject.com/en/1.11/howto/deployment/checklist/">Deployment Checklist</a>
                     before taking this project into a production environment.
                   </p>
 
